[package]
name = "polars_ml"
version = "0.1.2"
edition = "2021"

[lib]
name = "polars_ml"
crate-type= ["lib", "cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.12.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.38.3", features = ["strings", "dtype-struct"] , default-features = false }
rust-stemmers = "1.2.0"
num-traits = "0.2.18"
grape = { path = "../grape"}

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
